--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "normalizr",
-  "version": "3.6.1",
+  "name": "@gcangussu/normalizr",
+  "version": "3.6.3",
   "description": "Normalizes and denormalizes JSON according to schema for Redux and Flux applications",
   "bugs": {
     "url": "https://github.com/paularmstrong/normalizr/issues"
